settings icon alignment bug fixing for safari

--- a/resources/bootstrap3/css/notification.css
+++ b/resources/bootstrap3/css/notification.css
@@ -33,7 +33,7 @@
 #mm_setting {
     display: inline-block;
     cursor: pointer;
-    height: 25px;
+    height: 36px;
     width: 28px;
 
 
